# dxf2pdf

./: .gitignore  README.md  pyproject.toml
inputs/: ALTUZARRA-3084.TESSUTO_36.DXF  ALTUZARRA-3084.TESSUTO_36.report.json
src/dxf2pdf/: cli.py  convert.py  render.py  report.py  units.py  utils.py
tests/: test_units.py
