[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dxf2pdf"
version = "0.1.0"
description = "DXF → true-scale vector PDF (and optional SVG) for fashion pattern workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "ezdxf>=1.3",
  "matplotlib>=3.8",
]

[project.scripts]
dxf2pdf = "dxf2pdf.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]